# rusty-trading

./: .gitignore  Cargo.toml
src/: execution.rs  external.rs  lib.rs  main.rs  simulation.rs
src/app/: Cargo.toml
src/app/src/: external.rs  main.rs
src/simulation/: mod.rs  simulation.rs
src/structs/: mod.rs  operation.rs  order_book.rs  point.rs  stock.rs  time_range.rs  time_series.rs  transaction.rs
