[package]
name = "rusty-trading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
mio = "0.8.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4.34", features = ["serde"] }
tower-http = {version =  "*", features = ["cors"]}
tokio-cron-scheduler = "*"
rusty-trading-model = { path = "../rusty-trading-model" }
rand = "0.8.5"
reqwest = { version = "0.12", features = [] }
dashmap = { version = "6.1.0", features = ["serde"] }
statrs = "0.18.0"
log = "0.4"