[package]
name = "rusty-trading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
mio = "0.8.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
tokio-cron-scheduler = "*"
rusty-trading-lib = {version = "0.1.0", path = "../../" }
